# slim-diff

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_NOTES.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/camera_ready/: base_bottleneck_only.yaml  base_decoupled.yaml  base_shared.yaml
configs/examples/: cache_example.yaml  generation_spec_example.json  metrics_example.yaml  training_example.yaml
docs/: CHANGES.md  GENERATE_REPLICAS_OUTPUT.md  ICIP2026_JS-DDPM_Analysis.md  ICIP2026_JS-DDPM_Analysis_v1.md  LOCAL_BINNING_IMPLEMENTATION.md  LOGGING_GUIDE.md  PUBLICATION_CHECKLIST.md  QUICK_START_SLURM.md  ema_checkpoint_verification.md
docs/audit_output/: audit_results.json
docs/icip2026/: writing_brief_zero_coupling.md
docs/icip2026/rebuttal_plans/: TASK-04_fold_aware_evaluation_pipeline.md  TASK-05_posthoc_analyses.md  TASK-06_qualitative_visualization.md  TASK_01_ARCH_decoupled_bottleneck.md  TASK_02_FOLD_kfold_data_pipeline.md  TASK_03_ORCH_training_orchestration.md  progress.md
docs/legacy/lesion_area_analysis/: threshold_analysis_summary.csv
docs/legacy/md-files/: DROP_HEALTHY_PATIENTS_FEATURE.md  FIXES_SUMMARY.md  JAN_2026_UPDATES.md  MULTI_DATASET_GUIDE.md  REPLICA_QUALITY_CHECK_USAGE.md  SINUSOIDAL_EMBEDDING_BUG_ANALYSIS.md  SINUSOIDAL_EMBEDDING_FIX.md  Z_BINNING_ANALYSIS.md  reasoning_low_dice_on_negative.md
docs/legacy/test_analysis/: test_zbin_distribution.csv
docs/legacy/train_analysis/: train_zbin_distribution.csv
docs/legacy/val_analysis/: val_zbin_distribution.csv
docs/lesion_area_analysis/: summary.json  threshold_analysis_by_zbin.csv
docs/md-files/: CACHE_FIX_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md
docs/sashimi26/: 01_zero_coupling_baseline.md  02_distributional_fidelity_trts.md  03_linear_probe_analysis.md  04_narrative_redirection_sashimi.md
docs/tex/sample_counts/: sample_counts.csv  sample_counts.tex  template.tex
outputs/experiments/: experiment_planification.csv
scripts/: camera_ready_analysis.py  debug_bottleneck_grads.py  probe_bottleneck_shared_params.py  verify_ema_checkpoint.py
slurm/: PROPOSAL_REPORT.md  generate_jsddpm.sh  generate_replicas_array.sh  replicas_experiments_array.sh  segmentation_experiments_array.sh  train_jsddpm.sh  train_jsddpm_wandb.sh
slurm/ablation_study_hf/: proposal.yaml  train_generate.sh
slurm/ablation_study_xai/ablation_high_eta/: ablation_high_eta.yaml  train_generate.sh
slurm/ablation_study_xai/ablation_no_ffl/: ablation_no_ffl.yaml  train_generate.sh
slurm/ablation_study_xai/ablation_no_selfcond/: ablation_no_selfcond.yaml  train_generate.sh
slurm/ablation_study_xai/proposal/: DIAGNOSTIC_ANALYSIS_REPORT.md  proposal.yaml  train_generate.sh
slurm/camera_ready/: README.md  _activate_conda.sh  _fold_eval_job.sh  _load_paths.py  build_cache_and_kfold.sh  launch_camera_ready.sh  launch_zero_coupling.sh  picasso_paths.yaml  run_fold_eval.sh  run_posthoc.sh
slurm/camera_ready/decoupled_fold_0/: config.yaml  train_generate.sh
slurm/camera_ready/decoupled_fold_1/: config.yaml  train_generate.sh
slurm/camera_ready/decoupled_fold_2/: config.yaml  train_generate.sh
slurm/camera_ready/shared_fold_0/: config.yaml  train_generate.sh
slurm/camera_ready/shared_fold_1/: config.yaml  train_generate.sh
slurm/camera_ready/shared_fold_2/: config.yaml  train_generate.sh
slurm/camera_ready/zero_coupling_fold_0/: train_generate.sh
slurm/camera_ready/zero_coupling_fold_1/: train_generate.sh
slurm/camera_ready/zero_coupling_fold_2/: config.yaml  train_generate.sh
slurm/cfg/: jsddpm_cfg.yaml  train_jsddpm.sh
slurm/epsilon_prediction/jsddpm_complete_no_self_cond/: jsddpm_complete_no_self_cond.yaml
slurm/epsilon_prediction/jsddpm_ffl/: generate_jsddpm.sh
slurm/iwinac2026/: master.md
slurm/iwinac2026/pMF_style_loss/: download_lpips_weights.sh  submit_all.sh
slurm/jsddpm_anatomical_prior/: jsddpm_anatomical_prior.yaml  train_jsddpm.sh
slurm/jsddpm_baseline/: jsddpm_baseline.yaml  train_jsddpm.sh
slurm/jsddpm_ffl/: jsddpm_ffl.yaml  train_jsddpm.sh
slurm/jsddpm_kendall/: jsddpm_kendall.yaml  train_jsddpm.sh
slurm/jsddpm_sinus_kendall_weighted/: jsddpm_sinus_kendall_weighted.yaml  train_jsddpm.sh
slurm/jsddpm_sinus_kendall_weighted_anatomicalprior/: jsddpm_sinus_kendall_weighted_anatomicalprior.yaml  train_jsddpm.sh
slurm/jsddpm_sinusoidal_embeddings/: jsddpm_sinusoidal_embeddings.yaml  train_jsddpm.sh
slurm/jsddpm_weighted/: jsddpm_weighted.yaml  train_jsddpm.sh
slurm/lesion_replication_fix_experiments/jsddpm_complete/: jsddpm_complete.yaml  train_jsddpm.sh
slurm/lesion_replication_fix_experiments/jsddpm_complete_anatomical_conditioning/: jsddpm_complete_anatomical_conditioning.yaml  train_jsddpm.sh
slurm/lesion_replication_fix_experiments/jsddpm_complete_no_self_cond/: jsddpm_complete_no_self_cond.yaml  train_jsddpm.sh
slurm/lesion_replication_fix_experiments/jsddpm_ffl/: jsddpm_ffl.yaml  train_jsddpm.sh
slurm/lesion_replication_fix_experiments/jsddpm_lp_norm_only/: generate_jsddpm.sh  jsddpm_lp_norm_only.yaml  train_jsddpm.sh
slurm/old_experiments/jsddpm_anatomical_prior/: generate_jsddpm.sh  train_jsddpm.sh  (+1 more)
slurm/server3/: launch_bottleneck_only.sh  worker_bottleneck_only.sh
slurm/sinusoidal_embeddings/: jsddpm_sinusoidal_embeddings.yaml  train_jsddpm.sh
slurm/sinusoidal_embeddings_kendall/: jsddpm_sinusoidal_embeddings_kendall.yaml  train_jsddpm.sh
slurm/sinusoidal_embeddings_noweight/: jsddpm_sinusoidal_embeddings.yaml  train_jsddpm.sh
slurm/weighted_mask_loss/: jsddpm_weighted_mask_loss.yaml  train_jsddpm.sh
src/classification/: README.md  __init__.py  __main__.py
src/diffusion/: README.md  __init__.py
src/segmentation/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py
src/shared/: __init__.py
src/utils/: generate_abstract_figures.py  visualize_3d_octant.py
(+491 files in other folders)
