[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slim-diff"
version = "1.0.0"
description = "SLIM-Diff: A compact joint diffusion model for synthesizing paired FLAIR MRI slices and lesion masks in low-data epilepsy imaging scenarios"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mario Pascual González", email = "mpascual@uma.es"}
]
keywords = [
    "diffusion models",
    "medical imaging",
    "epilepsy",
    "FCD",
    "focal cortical dysplasia",
    "MRI",
    "FLAIR",
    "lesion synthesis",
    "data augmentation",
    "deep learning",
    "image generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "monai>=1.3.0",
    "monai-generative>=0.2.0",
    "einops>=0.4.0",
    "omegaconf>=2.3.0",
    "numpy>=1.24.0",
    "nibabel>=5.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "wandb>=0.15.0",
    "scipy>=1.10.0",
    "torch-fidelity>=0.3.0",
    "torchmetrics>=1.0.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.2.0",
    "seaborn>=0.12.0",
    "scikit-image>=0.20.0",
    "PyWavelets>=1.4.0",
    "lpips>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
similarity = [
    "scikit-posthocs>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/mpascualgonzalez/slim-diff"
Repository = "https://github.com/mpascualgonzalez/slim-diff"
Documentation = "https://github.com/mpascualgonzalez/slim-diff#readme"
"Bug Tracker" = "https://github.com/mpascualgonzalez/slim-diff/issues"

[project.scripts]
slimdiff-cache = "src.diffusion.data.caching:main"
slimdiff-train = "src.diffusion.training.runners.train:main"
slimdiff-generate = "src.diffusion.training.runners.generate:main"
slimdiff-generate-spec = "src.diffusion.training.runners.generate_from_spec:main"
slimdiff-metrics = "src.diffusion.scripts.similarity_metrics.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src.diffusion*", "src.shared*"]
exclude = ["src.segmentation*", "src.classification*"]

[tool.pytest.ini_options]
testpaths = ["src/diffusion/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
